--- a/config.js.example
+++ b/config.js.example
@@ -1,6 +1,6 @@
 const config = {
-  // Bot Owner, level 10 by default. A User ID. Should never be anything else than the bot owner's ID.
-  "ownerID": "{{ownerID}}",
+  // Bot Owner, level 10 by default. You do not need to supply the owner ID, as the bot
+  // will pull this information directly from its application page.
 
   // Bot Admins, level 9 by default. Array of user ID strings.
   "admins": [],
@@ -9,9 +9,33 @@ const config = {
   "support": [],
 
   // Your Bot's Token. Available on https://discordapp.com/developers/applications/me
-  "token": {{token}},
+  "token": "mfa.VkO_2G4Qv3T--NO--lWetW_tjND--TOKEN--QFTm6YGtzq9PH--4U--tG0",
+
+  "dashboard" : {
+    "oauthSecret": "enter oauth secret here", // This is the `client` secret in your bot application page.
+    "callbackURL": "http://localhost:8080/callback",
+    "sessionSecret": "super-secret-session-thing",
+    "domain": "localhost",
+    "port": 8080
+  },
+
+  // Default per-server settings. These settings are entered in a database on first load, 
+  // And are then completely ignored from this file. To modify default settings, use the `conf` command.
+  // DO NOT REMOVE THIS BEFORE YOUR BOT IS LOADED AND FUNCTIONAL.
+  
+  "defaultSettings" : {
+    "prefix": "-",
+    "modLogChannel": "mod-log",
+    "modRole": "Moderator",
+    "adminRole": "Administrator",
+    "systemNotice": "true",
+    "welcomeEnabled": "false",
+    "welcomeChannel": "welcome",
+    "welcomeMessage": "Say hello to {{user}}, everyone! We all need a warm welcome sometimes :D",
+  },
 
   // PERMISSION LEVEL DEFINITIONS.
+
   permLevels: [
     // This is the lowest permisison level, this is for non-roled users.
     { level: 0,
@@ -55,7 +79,7 @@ const config = {
       name: "Server Owner", 
       // Simple check, if the guild owner id matches the message author's ID, then it will return true.
       // Otherwise it will return false.
-      check: (message) => message.channel.type === "text" ? (message.guild.ownerID === message.author.id ? true : false) : false
+      check: (message) => message.channel.type === "text" ? (message.guild.owner.user.id === message.author.id ? true : false) : false
     },
 
     // Bot Support is a special inbetween level that has the equivalent of server owner access
@@ -79,7 +103,7 @@ const config = {
     { level: 10,
       name: "Bot Owner", 
       // Another simple check, compares the message author id to the one stored in the config file.
-      check: (message) => message.client.config.ownerID === message.author.id
+      check: (message) => message.client.appInfo.owner.id === message.author.id
     }
   ]
 };
