--- a/package.json
+++ b/package.json
@@ -1,48 +1,44 @@
 {
-  "name": "shitpost",
-  "version": "0.0.2",
-  "description": "A shiitty discord bot.",
+  "name": "guidebot",
+  "version": "6.0.0",
+  "description": "A boilerplate example bot with command handler and reloadable commands. Updated and Maintained by the Idiot's Guide Community",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "engines": {
-    "node": ">=8"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/OverThrown/shitpost-bot"
+    "url": "git+https://github.com/An-Idiots-Guide/guidebot-class.git"
   },
-  "author": "OverThrow Development",
+  "author": "Evelyne Lachance <eslachance@gmail.com> (http://evie.codes)",
   "contributors": [
-    "William Strong"
+    "York (http://anidiots.guide)"
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://overthrowdev.com/"
+    "url": "https://github.com/An-Idiots-Guide/guidebot-class/issues"
   },
-  "homepage": "https://overthrowdev.com/",
+  "homepage": "https://github.com/An-Idiots-Guide/guidebot-class#readme",
   "dependencies": {
     "better-sqlite-pool": "^0.2.3",
-    "body-parser": "^1.18.2",
-    "chalk": "^2.3.0",
+    "body-parser": "^1.19.0",
+    "chalk": "^2.4.2",
     "discord.js": "^11.6.3",
-    "ejs": "^3.0.1",
+    "ejs": "^2.7.4",
     "enmap": "^4.8.7",
-    "express": "^4.16.2",
+    "express": "^4.17.1",
     "express-passport": "^0.1.0",
-    "express-session": "^1.15.6",
-    "got": "^10.7.0",
-    "helmet": "^3.9.0",
+    "express-session": "^1.17.0",
+    "helmet": "^3.22.0",
     "klaw": "^2.1.1",
-    "marked": "^0.5.0",
-    "memorystore": "^1.6.0",
-    "moment": "^2.22.2",
+    "marked": "^0.5.2",
+    "memorystore": "^1.6.2",
+    "moment": "^2.24.0",
     "moment-duration-format": "^1.3.0",
-    "passport": "^0.4.0",
+    "passport": "^0.4.1",
     "passport-discord": "^0.1.3",
-    "readline-sync": "^1.4.9",
-    "snekfetch": "^3.5.8",
+    "readline-sync": "^1.4.10",
+    "snekfetch": "^3.6.4",
     "request": "^2.88.2"
   }
 }
